# EngineAttempt

./: Audi R8.glb  CMakeLists.txt  frag.spv  tests.cpp  vert.spv
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/myengine.app/Contents/: Info.plist
build2/myengine.app/Contents/MacOS/: myengine
build2/myengine.app/Contents/Resources/: frag.spv  vert.spv
build2/myengine.app/Contents/Resources/shaders/: shader.frag
shaders/: shader.frag  shader.vert
src/glad/: gl.h
